Make sudoExec wrapper.  Check args with startsWith instead of cli parse.
Make a sudoExec wrapper around sudo -n which encapsulates the binding
to the tty device and the printing of the command output.

For the nova.conf arguments, check them using startsWith because
Apache CLI won't parse argument lists if any unrecognized arguments
are present.

Switch from URL to URI class for parsing, so it'll function on any
protocol string.

Add log4j.properties file, so log4j will function from mvn exec:java

CR: 382